--- a/src/index.html
+++ b/src/index.html
@@ -39,7 +39,7 @@
         </div>
 
         <div class="container videoPortatil">
-            <!--Por rellenar VIDEO PORTATIL-->
+            <img src="images/pcAnimado.png">
         </div>
 
         <div class="fondoNegro">
@@ -50,25 +50,32 @@
             </div>
         </div>
 
-        <div class="container text-center">
-            <h3>La plataforma de confianza de 287 millones de creadores, empresarios y negocios</h3>
-        </div>
+        <div class="textllamativo container text-center">
+            <h3>La plataforma de confianza de 287 millones<br> de creadores, empresarios y negocios</h3>
+        </div>  
 
         <div class="carusel">
-            <!--Por rellenar-->
+            <div class="text-center">
+                <img src="/src/images/logos/deloitte.png">
+                <img src="/src/images/logos/riteaid.png">
+                <img src="/src/images/logos/santander.png">
+                <img src="/src/images/logos/WB.png">
+                <img src="/src/images/logos/zendesk.png">
+            </div>
         </div>
 
-        <div class="container text-center">
+        <div class="container text-center experiencias">
             <p>Las mejores experiencias de video en Internet, en un mismo lugar</p>
-            <h1>Su plataforma de video impulsada por IA</h1>
+            <h1>Su plataforma de video<br> impulsada por IA</h1>
         </div>
-
-        <div class="container">
+        
+        
+        <div class="container portatilBlock">
             <div class="row">
                 <div class="col">
                     <img src="images/portatil.png" alt="Portátil">
                 </div>
-                <div class="col">
+                <div class="col bottom15">
                     <h3>Alojamiento y reproductor</h3>
                     <p>Aloje sus videos con nuestro reproductor HD sin anuncios. Dondequiera que los inserte o comparta, su diseño de reproductor personalizado y su marca los acompañarán.</p>
                     <button class="btn-primary btn" type="button">-></button>
