--- a/src/index.html
+++ b/src/index.html
@@ -71,22 +71,22 @@
         
         
         <div class="container portatilBlock">
-            <div class="row">
-                <div class="col">
+            <div class="row block1">
+                <div class="col-6 imgPortatil">
                     <img src="images/portatil.png" alt="Portátil">
                 </div>
-                <div class="col bottom15">
+                <div class="col-6 bottom15">
                     <h3>Alojamiento y reproductor</h3>
                     <p>Aloje sus videos con nuestro reproductor HD sin anuncios. Dondequiera que los inserte o comparta, su diseño de reproductor personalizado y su marca los acompañarán.</p>
                     <button class="btn-primary btn" type="button">-></button>
                 </div>
             </div>
 
-            <div class="row">
-                <div class="col">
+            <div class="row block2">
+                <div class="col-6 imgBlock21">
                     <img src="images/editor.png" alt="Editor">
                 </div>
-                <div class="col">
+                <div class="col-6 imgBlock22">
                     <img src="images/llamada.png" alt="Llamada">
                 </div>
             </div>
