--- a/src/index.html
+++ b/src/index.html
@@ -91,7 +91,7 @@
                 </div>
             </div>
 
-            <div class="row">
+            <div class="row block3">
                 <div class="col">
                     <h3>Creación y edición</h3>
                     <p>Cree y edite sus videos con nuestras sencillas herramientas. Agregue efectos, texto y más para que sus videos se destaquen.</p>
@@ -104,15 +104,22 @@
                 </div>
             </div>
 
-            <div class="row">
-                <div class="col">
+            <div class="row block4">
+                <div class="col imgBlock41">
                     <img src="images/libreria.png" alt="Librería">
+                </div>
+                <div class="col imgBlock42">
+                    <img src="images/imagenes.png" alt="Imágenes">
+                </div>
+            </div>
+
+            <div class="row block5">
+                <div class="col">
                     <h3>Gestión de video</h3>
                     <p>Mantenga sus videos organizados y seguros. Nuestras herramientas facilitan la gestión de su videoteca y mantienen su contenido seguro.</p>
                     <button class="btn-primary btn" type="button">-></button>
                 </div>
                 <div class="col">
-                    <img src="images/imagenes.png" alt="Imágenes">
                     <h3>Monetización</h3>
                     <p>Gane dinero con sus videos con nuestras herramientas de monetización. Agregue anuncios, suscripciones y más a sus videos.</p>
                     <button class="btn-primary btn" type="button">-></button>
@@ -120,7 +127,7 @@
             </div>
         </div>
 
-        <div class="container">
+        <div class="container text-center flujo">
             <p>Mejor flujo de trabajo, mejores resultados</p>
             <h1>Herramientas de video para potenciar cualquier negocio</h1>
         </div>
