botones sin ajustar

--- a/src/index.html
+++ b/src/index.html
@@ -18,23 +18,65 @@
                 <a class="navbar-brand">Precio</a>
                 <a class="navbar-brand">Ver</a>
             </div>
-            <div>
-                <a class="navbar-brand">Comunicarse con ventas</a>
-                <a class="navbar-brand">Iniciar Sesión</a>
-                <button class="btn btn-outline-success" type="button">Unirse</button>
+            <div class="btn-container">
+                <div class="btn-wrapper">
+                    <a class="btn-custom" href="https://vimeo.com/es/features/video-privacy">
+                        <span class="me-2">Unirse</span>
+                        <div class="arrow-wrapper">
+                            <svg width="40px" height="20px" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg" class="shrink-0 btn-arrow rounded-1">
+                                <g>
+                                    <path fill-rule="evenodd" clip-rule="evenodd"
+                                        d="M13.085 10.8333L9.42356 14.5731C9.04929 14.9553 9.04929 15.5667 9.42356 15.949C9.8092 16.3429 10.4433 16.3429 10.8289 15.949L15.965 10.703C16.345 10.3148 16.345 9.68553 15.965 9.29737L10.8289 4.05105C10.4433 3.65715 9.80921 3.65713 9.42356 4.05101C9.04928 4.43328 9.04926 5.04462 9.42352 5.42691L13.0847 9.16666L4.58333 9.16666C4.1231 9.16666 3.75 9.53976 3.75 10C3.75 10.4602 4.1231 10.8333 4.58333 10.8333L13.085 10.8333Z">
+                                    </path>
+                                </g>
+                            </svg>
+                        </div>
+                    </a>
+                </div>
             </div>
+            
         </nav>
     </header>
 
     <main>
-        <div class="container">
+        <div class="container text-center">
             <div class="row text-center">
                 <h1 class="encabezado1">Haga más con sus videos</h1>
                 <p class="textEncabezado1">Conozca la plataforma de video completa que puede transformar su manera de
                     hacer negocios.</p>
-                <div class="container-fluid">
-                    <button class="btn btn-outline-success" type="button">Ver los planes</button>
-                    <button class="btn btn-outline-success" type="button">Unirse gratis</button>
+                <div class="container-fluid text-center">
+                    <div class="btn-container">
+                        <div class="btn-wrapper">
+                            <a class="btn-custom" href="https://vimeo.com/es/features/video-privacy">
+                                <span class="me-2">Ver los planes</span>
+                                <div class="arrow-wrapper">
+                                    <svg width="40px" height="20px" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg" class="shrink-0 btn-arrow rounded-1">
+                                        <g>
+                                            <path fill-rule="evenodd" clip-rule="evenodd"
+                                                d="M13.085 10.8333L9.42356 14.5731C9.04929 14.9553 9.04929 15.5667 9.42356 15.949C9.8092 16.3429 10.4433 16.3429 10.8289 15.949L15.965 10.703C16.345 10.3148 16.345 9.68553 15.965 9.29737L10.8289 4.05105C10.4433 3.65715 9.80921 3.65713 9.42356 4.05101C9.04928 4.43328 9.04926 5.04462 9.42352 5.42691L13.0847 9.16666L4.58333 9.16666C4.1231 9.16666 3.75 9.53976 3.75 10C3.75 10.4602 4.1231 10.8333 4.58333 10.8333L13.085 10.8333Z">
+                                            </path>
+                                        </g>
+                                    </svg>
+                                </div>
+                            </a>
+                        </div>
+                    </div>
+                    <div class="btn-container">
+                        <div class="btn-wrapper">
+                            <a class="btn-custom" href="https://vimeo.com/es/features/video-privacy">
+                                <span class="me-2">Unirse gratis</span>
+                                <div class="arrow-wrapper">
+                                    <svg width="40px" height="20px" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg" class="shrink-0 btn-arrow rounded-1">
+                                        <g>
+                                            <path fill-rule="evenodd" clip-rule="evenodd"
+                                                d="M13.085 10.8333L9.42356 14.5731C9.04929 14.9553 9.04929 15.5667 9.42356 15.949C9.8092 16.3429 10.4433 16.3429 10.8289 15.949L15.965 10.703C16.345 10.3148 16.345 9.68553 15.965 9.29737L10.8289 4.05105C10.4433 3.65715 9.80921 3.65713 9.42356 4.05101C9.04928 4.43328 9.04926 5.04462 9.42352 5.42691L13.0847 9.16666L4.58333 9.16666C4.1231 9.16666 3.75 9.53976 3.75 10C3.75 10.4602 4.1231 10.8333 4.58333 10.8333L13.085 10.8333Z">
+                                            </path>
+                                        </g>
+                                    </svg>
+                                </div>
+                            </a>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
@@ -48,7 +90,22 @@
                 <h1>Su paquete completo de herramientas de video</h1>
                 <p>Obtenga todo lo que necesita para editar, gestionar y publicar videos impactantes que generen
                     resultados.</p>
-                <button class="btn btn-outline-success" type="button">Ver los planes</button>
+                    <div class="btn-container">
+                        <div class="btn-wrapper">
+                            <a class="btn-custom" href="https://vimeo.com/es/features/video-privacy">
+                                <span class="me-2">Unirse</span>
+                                <div class="arrow-wrapper">
+                                    <svg width="40px" height="20px" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg" class="shrink-0 btn-arrow rounded-1">
+                                        <g>
+                                            <path fill-rule="evenodd" clip-rule="evenodd"
+                                                d="M13.085 10.8333L9.42356 14.5731C9.04929 14.9553 9.04929 15.5667 9.42356 15.949C9.8092 16.3429 10.4433 16.3429 10.8289 15.949L15.965 10.703C16.345 10.3148 16.345 9.68553 15.965 9.29737L10.8289 4.05105C10.4433 3.65715 9.80921 3.65713 9.42356 4.05101C9.04928 4.43328 9.04926 5.04462 9.42352 5.42691L13.0847 9.16666L4.58333 9.16666C4.1231 9.16666 3.75 9.53976 3.75 10C3.75 10.4602 4.1231 10.8333 4.58333 10.8333L13.085 10.8333Z">
+                                            </path>
+                                        </g>
+                                    </svg>
+                                </div>
+                            </a>
+                        </div>
+                    </div>
             </div>
         </div>
 
@@ -265,12 +322,42 @@
                         <li>Comunicarse con Ventas</li>
                         <li>Ver demostraciones</li>
                     </ul>
-                    <button class="btn btn-outline-success" type="button">Unirse</button>
+                    <div class="btn-container">
+                        <div class="btn-wrapper">
+                            <a class="btn-custom" href="https://vimeo.com/es/features/video-privacy">
+                                <span class="me-2">Unirse</span>
+                                <div class="arrow-wrapper">
+                                    <svg width="40px" height="20px" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg" class="shrink-0 btn-arrow rounded-1">
+                                        <g>
+                                            <path fill-rule="evenodd" clip-rule="evenodd"
+                                                d="M13.085 10.8333L9.42356 14.5731C9.04929 14.9553 9.04929 15.5667 9.42356 15.949C9.8092 16.3429 10.4433 16.3429 10.8289 15.949L15.965 10.703C16.345 10.3148 16.345 9.68553 15.965 9.29737L10.8289 4.05105C10.4433 3.65715 9.80921 3.65713 9.42356 4.05101C9.04928 4.43328 9.04926 5.04462 9.42352 5.42691L13.0847 9.16666L4.58333 9.16666C4.1231 9.16666 3.75 9.53976 3.75 10C3.75 10.4602 4.1231 10.8333 4.58333 10.8333L13.085 10.8333Z">
+                                            </path>
+                                        </g>
+                                    </svg>
+                                </div>
+                            </a>
+                        </div>
+                    </div>
                 </div>
                 <div class="col-md-4 top-right">
                     <h3>Atención al cliente 24x7</h3>
                     <p>Nuestro equipo de asistencia al cliente está disponible las 24 horas, los 7 días de la semana. Los miembros de Enterprise también tienen acceso a administradores de cuentas especializados y a un ANS de tiempo de actividad garantizado.</p>
-                    <button class="btn btn-outline-success" type="button">Unirse</button>
+                    <div class="btn-container">
+                        <div class="btn-wrapper">
+                            <a class="btn-custom" href="https://vimeo.com/es/features/video-privacy">
+                                <span class="me-2">Contactar al equipo de asistencia</span>
+                                <div class="arrow-wrapper">
+                                    <svg width="40px" height="20px" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg" class="shrink-0 btn-arrow rounded-1">
+                                        <g>
+                                            <path fill-rule="evenodd" clip-rule="evenodd"
+                                                d="M13.085 10.8333L9.42356 14.5731C9.04929 14.9553 9.04929 15.5667 9.42356 15.949C9.8092 16.3429 10.4433 16.3429 10.8289 15.949L15.965 10.703C16.345 10.3148 16.345 9.68553 15.965 9.29737L10.8289 4.05105C10.4433 3.65715 9.80921 3.65713 9.42356 4.05101C9.04928 4.43328 9.04926 5.04462 9.42352 5.42691L13.0847 9.16666L4.58333 9.16666C4.1231 9.16666 3.75 9.53976 3.75 10C3.75 10.4602 4.1231 10.8333 4.58333 10.8333L13.085 10.8333Z">
+                                            </path>
+                                        </g>
+                                    </svg>
+                                </div>
+                            </a>
+                        </div>
+                    </div>
                 </div>
             </div>
             <div class="row titulos-footer">
